@@ -59,15 +59,15 @@ module OpenSSL
       const_set(name, klass)
     }
 
-    # This class is only provided for backwards compatibility.
+    # Deprecated.
     #
-    # Use OpenSSL::Digest in the future.
+    # This class is only provided for backwards compatibility.
     class Digest < Digest # :nodoc:
       # Deprecated.
       #
       # See OpenSSL::Digest.new
       def initialize(*args)
-        # add warning
+        warn('Digest::Digest is deprecated; use Digest')
         super(*args)
       end
     end
